--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "chai": "^6.0.1",
+    "chai-http": "^5.1.2",
     "mocha": "^11.7.1",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
