--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "bcrypt": "^6.0.0",
     "commander": "^14.0.0",
     "cookie-parser": "^1.4.7",
@@ -23,6 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
