--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@faker-js/faker": "^9.9.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
+    "@sentry/node": "^10.8.0",
+    "@sentry/tracing": "^7.120.4",
     "bcrypt": "^6.0.0",
     "commander": "^14.0.0",
     "cookie-parser": "^1.4.7",
@@ -30,6 +32,8 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/passport-jwt": "^4.0.1",
     "chai": "^6.0.1",
     "chai-http": "^5.1.2",
     "mocha": "^11.7.1",
