--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@nestjs/cli": "^11.0.10",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/testing": "^11.1.6",
     "@types/bcrypt": "^6.0.0",
